[package]
name = "bs"
version = "0.1.0"
authors = ["Dave Huseby <dhuseby@linuxfoundation.org>"]
edition = "2018"
description = "BetterSign signing tool that uses DIDDir keyrings."
repository = "https://github.com/dhuseby/bs"
documentation = "https://github.com/dhuseby/bs/blob/master/README.md"
readme = "README.md"
keywords = ["signing", "DIDDir"]
license = "Apache-2.0"

[dependencies]
diddir = { git = "https://github.com/dhuseby/diddir.git" }
hex = "0.3.1"
indicatif = "0.11.0"
sha2 = "0.8"
sodiumoxide = "0.2"
structopt = "0.2"
